# SimpleVM

./: ASTInterpreter.c  ASTInterpreter.h  ASTNodes.c  ASTNodes.h  Bootstrap.c  Bootstrap.h  BytecodeInterpreter.c  BytecodeInterpreter.h  Bytecodes.h  CMakeLists.txt  DevTools.c  DevTools.h  Hashing.c  Hashing.h  ImageBuilder.c  ImageBuilder.h  Interpreter.c  Interpreter.h  ObjectMemory.c  ObjectMemory.h  README.md  SizedString.c  SizedString.h  main.c
reader/: NodeReader.c  NodeReader.h  NodeReader_V1.c  NodeReader_V1.h  NodeReader_V1_Tools.c  NodeReader_V1_Tools.h
tests/: BasicTests.c  BasicTests.h  BytecodeTests.c  BytecodeTests.h  CoreTest.c  CoreTest.h
testtools/: Asserting.c  Asserting.h
